[package]
name = "threeotwo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}

axum = "0.8.6"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors"]}

serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
