[package]
name = "threeotwo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}

axum = "0.8.6"
axum-extra = "0.10"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors"]}

sqlx = {version = "0.8", features = ["sqlite", "macros", "runtime-tokio-rustls"]}

serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
lazy-regex = "2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
